[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "python_rs"
version = "0.0.1"
description = "python_rs JIT/interpreter"
requires-python = ">=3.8"

[tool.maturin]
# The Rust extension module must be named `python_rs` to match #[pymodule]
module-name = "python_rs"
features = ["pyo3/extension-module"]