[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "python_rs"
version = "0.0.1"
description = "python_rs jit/interpreter"
requires-python = ">=3.8"

[project.scripts]
"python.rs" = "python_rs:run_cli"

[tool.maturin]
module-name = "python_rs"
features = ["pyo3/extension-module"]