[package]
name = "rpython"
version = "0.0.1"
edition = "2021"

[lib]
name = "rpython"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module"] }
pest = "2.7"
pest_derive = "2.7"
pest_consume = "1.1"  
target-lexicon = "0.12"
once_cell = "1.20"
rayon = "1.10"

cranelift = "0.111.0"
cranelift-module = "0.111.0"
cranelift-jit = "0.111.0"
cranelift-codegen = "0.111.0"
cranelift-frontend = "0.111.0"