[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rpython"
version = "0.0.1"
description = "RPython JIT/interpreter"
requires-python = ">=3.8"

[tool.maturin]
# The Rust extension module must be named `rpython` to match #[pymodule]
module-name = "rpython"
features = ["pyo3/extension-module"]